fixed spacing

--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 .profile-img {
-  margin-top: 25px;
+  margin-top: -12px;
 }
 
 .profile-h1 {
